--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/leducthanh041/Fullstack-Backend-Nodejs#readme",
   "dependencies": {
+    "dotenv": "16.0.3",
     "ejs": "3.1.8",
     "express": "4.18.2"
   }
